src/App.css
body {
	font-size: 14px;
	width: 100vw;
	height: 100vh;
	display: flex;
	align-items: center;
	justify-content: center;
}

#calculator-container {
	width: 16em;
	height: 20.5em;
	border: 1px solid black;
	border-radius: 6px;
	display: flex;
	flex-flow: row wrap;
	position: relative;
	background: #42b9f4;
}

#calculator-container #ac {
	position: absolute;
	left: .25em;
	bottom: .4em;
	background-color: #e387ff;
	border-radius: 3px;
	cursor: pointer;
	line-height: 3.5em;
	height: 3.5em;
	width: 3.5em;
	font-size: 1em;
	font-weight: 700;
	text-align: center;
}

#display-results {
	flex: 4 100%;
	height: 5em;
	padding: 0 1em;
	display: flex;
	justify-content: flex-end;
	align-items: center;
}

#display-results span {
	height: 1.5em;
	line-height: 1.5em;
	padding-right: .5em;
	font-size: 1.4em;
	background-color: white;
	width: 10em;
	text-align: right;
	border-radius: 3px;
}

#calculator-buttons {
	flex: 3;
	display: flex;
	justify-content: space-around;
	flex-flow: row wrap;
	height: 15em;
	/*width: 15em;*/
}

#operations {
	flex: 1;
	display: flex;
	flex-direction: column;
	justify-content: space-around;
	height: 15em;
}

#calculator-buttons > * {
	background-color: #a86cf7;
	line-height: 3.5em;
	height: 3.5em;
	width: 3.5em;
}

#operations > * {
	background-color: #7a14ff;
	line-height: 2.8em;
	/*width: 3.7em;*/
}

#calculator-buttons > *, #operations > * {
	width: 3.6em;
	border-radius: 3px;
	cursor: pointer;
	text-align: center;
	font-size: 1em;
	font-weight: 700;
	vertical-align: center;
}

#calculator-buttons span:nth-of-type(1) { order: 10; }
#calculator-buttons span:nth-of-type(2) { order: 7; }
#calculator-buttons span:nth-of-type(3) { order: 8; }
#calculator-buttons span:nth-of-type(4) { order: 9; }
#calculator-buttons span:nth-of-type(5) { order: 4; }
#calculator-buttons span:nth-of-type(6) { order: 5; }
#calculator-buttons span:nth-of-type(7) { order: 6; }
#calculator-buttons span:nth-of-type(8) { order: 1; }
#calculator-buttons span:nth-of-type(9) { order: 2; }
#calculator-buttons span:nth-of-type(10) { order: 3; }

